--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <div class="container ">
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 border-top">
         <div class="col mb-3">
-          <p>Created By Aaryan using html and bootstrap </p>
+          <p class="text-body-secondary">Created By Aaryan using html and bootstrap </p>
           <p class="text-body-secondary">© Tindog</p>
         </div>
 
